# pumicite

./: Cargo.toml  README.md
assets/bindless/: Makefile  bindless.comp.pipeline.ron  bindless.slang  bindless.spv
assets/gltf/: .gitignore  pbr.gfx.pipeline.ron  pbr.slang  pbr.spv
assets/jungle/: Makefile  pbr.gfx.pipeline.ron
assets/mandelbrot/: Makefile  mandelbrot.comp.pipeline.ron  mandelbrot.slang  mandelbrot.spv
assets/mesh_shader_culling/: Makefile  mesh_shader_culling.gfx.pipeline.ron  mesh_shader_culling.slang  mesh_shader_culling.spv
assets/mesh_shading/: Makefile  mesh_shading.gfx.pipeline.ron  mesh_shading.slang  mesh_shading.spv
assets/radiance_cascades/: distances.comp.pipeline.ron  draw_lines.comp.pipeline.ron  radiance_cascades.comp.pipeline.ron  radiance_cascades.slang  radiance_cascades.spv
assets/sky_atmosphere/: Makefile  atmosphere_common.slang  multi_scattering.comp.pipeline.ron  multi_scattering.slang  multi_scattering.spv  sky_render.gfx.pipeline.ron  sky_render.slang  sky_render.spv  sky_view_lut.comp.pipeline.ron  sky_view_lut.slang  sky_view_lut.spv  transmittance_lut.comp.pipeline.ron  transmittance_lut.slang  transmittance_lut.spv
assets/triangle/: Makefile  triangle.gfx.pipeline.ron  triangle.slang  triangle.spv
crates/bevy/: Cargo.toml
crates/bevy/src/: debug.rs  heap.rs  lib.rs  loader.rs  pass.rs  plugin.rs  queue.rs  shader.rs  staging.rs  surface.rs  swapchain.rs  system.rs
crates/bevy/src/loader/: dds.rs  png.rs
crates/bevy/src/rtx/: blas.rs  mod.rs  tlas.rs
crates/bevy/src/shader/: compute.rs  graphics.rs  mod.rs  ron_types.rs
crates/cli/: Cargo.toml
crates/cli/src/: codegen.rs  lib.rs  main.rs
crates/egui/: Cargo.toml
crates/egui/src/: lib.rs
crates/egui/src/shaders/: Makefile  egui.gfx.pipeline.ron  egui.slang  egui.spv
crates/scene/: Cargo.toml
crates/scene/src/: gltf.rs  lib.rs
crates/slang/: Cargo.toml
crates/slang/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: format.rs  lib.rs
examples/: basics.rs  bindless.rs  clear.rs  egui.rs  gltf.rs  jungle.rs  mandelbrot.rs  mesh_shader_culling.rs  mesh_shading.rs  radiance_cascades.rs  sky_atmosphere.rs  triangle.rs
examples/flycam/: cam2d.rs  mod.rs  util.rs
src/: alloc.rs  bevy.rs  bindless.rs  buffer.rs  command.rs  debug.rs  descriptor.rs  device.rs  extension.rs  image.rs  instance.rs  lib.rs  physical_device.rs  pipeline.rs  query.rs  queue.rs  rtx.rs  sampler.rs  surface.rs  swapchain.rs  sync.rs  tracking.rs
src/command/: compute.rs  render.rs  transfer.rs
src/utils/: format.rs  future.rs  idalloc.rs  mod.rs
