[package]
name = "pumicite_slang"
version = "0.1.0"
edition = "2024"

[dependencies]
shader-slang = { git = "https://github.com/0xbeefd1ed/slang-rs.git", commit = "5204f27cbab4eb58ecca6bde12e118070fb8f24c" }
pumicite_types = { path = "../types" }
ron = "0.12"
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
