[package]
name = "pumicite_types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
ash = { git = "https://github.com/0xbeefd1ed/ash", branch = "meta", default-features = false, features = ["std"] }
glam = "0.30"

[dev-dependencies]
ron = "0.12"
postcard = { version = "1", features = ["alloc"] }
